# mint-nemo

./: .gitignore  AGENTS.md  generate_additional_file  makepot  meson.build  meson_options.txt
.agents/skills/orquestrador-unificado/: SKILL.md
.github/workflows/: performance.yml
docs/: AUDIT-FINAL-SUMMARY.txt  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-FINAL-v6.7.md  EXECUTIVE-SUMMARY.md  EXEMPLO-PRATICO-INTEGRACAO.md  INDICE-MESTRE.md  ONDA-5-COMPLETA.md  ONDA-5-INTEGRACAO.md  ONDA-6-7-AVANCADAS.md  ONDA-6-COMPLETA.md  ONDA-7-INTEGRACAO-COMPLETA.md  ONDA-7-LAZY-THUMBNAILS.md  ONDAS-5-7-DETALHADO.md  PASSOS-ADICIONAIS-COMPLETOS.md  PROXIMOS-PASSOS.md  README-AUDIT.md  REFACTORING-ROADMAP.md  RELATORIO-FINAL-7-ONDAS.md  ROADMAP-MASTER-7-ONDAS.md  STATUS-FINAL-TODAS-ONDAS.md
libnemo-private/: meson.build  nemo-icon-canvas-item.c  nemo-icon-container.c  nemo-icon-lazy-loader.c  nemo-icon-lazy-loader.h  nemo-icon-private.h  nemo-icon-text-cache.c  nemo-icon-text-cache.h  nemo-lazy-thumbnail-loader.c  nemo-lazy-thumbnail-loader.h
releases/: gir1.2-nemo-3.0_6.6.2_amd64.deb  libnemo-extension-dev_6.6.2_amd64.deb  libnemo-extension1_6.6.2_amd64.deb  nemo-data_6.6.2_all.deb  nemo_6.6.2_amd64.deb
reports/: BACKLOG.md  BASELINE.md  CHANGES.md  EXEC_SUMMARY.md  RELEASE_CHECKLIST.md  SYSTEM_MAP.md  VALIDATION.md
reports/EVIDENCE/: 20260215_SUMMARY.md  20260215_analysis_results.txt  20260215_baseline_results.txt  20260215_build_workflow_lines.txt  20260215_dependency_install_validation.txt  20260215_eel_meson_lines.txt  20260215_extensions_list_spawn_lines.txt  20260215_meson_build_lines.txt  20260215_meson_options_lines.txt  20260215_nemo_view_spawn_lines.txt  20260215_thumbnail_fixcache_lines.txt  20260215_ui_validate_xvfb_after_install.txt  20260215_window_menus_spawn_lines.txt  SUMMARY.md
test/: meson.build  test-icon-text-cache.c  test-lazy-thumbnail-loader.c
utils/: audit-todos.sh  benchmark-icon-scroll.sh  compare-benchmarks.py  minify-glade.sh  profile-cpu.sh  profile-heap.sh  profile-memory.sh
